# backend-arch

./: .gitignore  Makefile  README.md  podman-compose.yml  pyproject.toml
.github/workflows/: build-push.yml  ci.yml
.playwright-mcp/: page-2026-06-08T08-06-09-388Z.yml  page-2026-06-08T13-17-50-170Z.yml  page-2026-06-10T08-41-26-752Z.yml  page-2026-06-11T08-21-11-341Z.yml  page-2026-06-11T08-21-29-903Z.yml  page-2026-06-11T08-41-13-330Z.yml  page-2026-06-11T08-41-21-244Z.yml  page-2026-06-11T09-17-14-208Z.yml  page-2026-06-11T09-17-22-180Z.yml  page-2026-06-11T09-17-27-905Z.yml  page-2026-06-11T09-18-35-491Z.yml  page-2026-06-11T11-24-49-801Z.yml  page-2026-06-11T11-25-13-467Z.yml  page-2026-06-11T12-30-55-229Z.yml
docs/superpowers/plans/: 2026-05-26-backend-arch-template.md
infra/nginx/: nginx.conf
infra/postgres/: init.sql
infra/redis/: redis.conf
scripts/: init-project.sh
service-template/: .env.example.jinja  Dockerfile.jinja  copier.yml  pyproject.toml.jinja
service-template/app/: config.py.jinja  dependencies.py.jinja  main.py.jinja
service-template/app/workers/: enqueue.py.jinja  settings.py.jinja  tasks.py.jinja
service-template/tests/: conftest.py.jinja
services/auth/: .env.example  .env~  Dockerfile  README.md  pyproject.toml
services/auth/app/: config.py  dependencies.py  main.py
services/auth/app/oauth/: models.py  router.py  schemas.py  service.py
services/auth/app/tokens/: router.py  schemas.py  service.py
services/auth/app/users/: models.py  router.py  schemas.py  service.py
services/auth/app/workers/: enqueue.py  settings.py  tasks.py
services/auth/tests/: conftest.py
services/auth/tests/test_tokens/: test_router.py
services/auth/tests/test_users/: test_models.py  test_router.py  test_service.py  test_worker_integration.py  test_worker_tasks.py
services/files/: .env.example  Dockerfile  README.md  pyproject.toml
services/files/app/: config.py  dependencies.py  main.py
services/files/app/storage/: __init__.py  client.py
services/files/app/uploads/: models.py  router.py  schemas.py
services/files/app/workers/: enqueue.py  settings.py  tasks.py
services/files/tests/: conftest.py
services/frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  vite.config.ts
services/frontend/src/: App.tsx  index.css
services/frontend/src/api/: admin.ts  audit.ts  auth.ts
services/frontend/src/components/: DynamicTable.tsx  (+1 more)
services/websocket/: .env.example  Dockerfile  README.md  pyproject.toml
services/websocket/app/: config.py  dependencies.py  main.py
services/websocket/app/connections/: manager.py  models.py  router.py  schemas.py
services/websocket/app/handlers/: router.py  schemas.py  service.py
services/websocket/tests/: conftest.py
services/websocket/tests/test_connections/: test_manager.py
services/websocket/tests/test_handlers/: test_router.py
(+11 files in other folders)
