[project]
name = "auth-service"
version = "0.1.0"
description = "Authentication and authorization microservice"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "tortoise-orm[asyncpg]>=0.22.0",
    "aerich>=0.8.0",
    "pydantic-settings>=2.7.0",
    "pydantic[email]>=2.7.0",
    "passlib[bcrypt]>=1.7.4",
    "redis[hiredis]>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "testcontainers[postgres,redis]>=4.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
